# micromouse-kerise-v4

./: .gitmodules  README.md
firmware/: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  partitions.csv  platformio.ini  sdkconfig  sdkconfig.KERISE  sdkconfig.defaults  sdkconfig.old
firmware/native/thread/: CMakeLists.txt  build.sh  log.h  main.cpp
firmware/src/: AccelDesigner.h  Accumulator.h  AutoRunner.h  BLEMouse.h  CMakeLists.txt  ExternalController.h  FastRun.h  Logger.h  Machine.h  MazeRobot.h  MoveAction.h  SearchRun.h  SpeedController.h  Trajectory.h  UserInterface.h  WallDetector.h  app_log.h  app_main.cpp  encoder.h  external_controller.h  fan.h  global.cpp  global.h  logger.h  machine.h  main.cpp  maze_robot.h  motor.h  move_action.h  slalom_shapes.h  speed_controller.h  tof.h  user_interface.h  wall_detector.h
firmware/src/agents/: maze_robot.h  move_action.h
firmware/src/config/: config.h  io_mapping.h  model.h  slalom_shapes.h  trajectory.h  wheel_parameter.h
firmware/src/ctrl/: FeedbackController.h
firmware/src/hardware/: VL6180X.cpp  app_wifi.c  app_wifi.h  battery.h  button.h  buzzer.h  encoder.h  fan.h  hardware.h  imu.h  led.h  mcpwm.c  motor.h  reflector.h  tof.h
firmware/src/machine/: external_controller.h  global.cpp  global.h  logger.h  machine.h  maze_robot.h  move_action.h  speed_controller.h  user_interface.h  wall_detector.h  wheel_parameter.h
firmware/src/supporters/: logger.h  speed_controller.h  supporters.h  user_interface.h  wall_detector.h
fusion360/: IMU v1.f3d  MCU v1.f3d  bearing_1-3-1 v1.f3d  fan6 v1.f3d  (+12 more)
(+747 files in other folders)
